update some language files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "nav": {
-    "MANAGEMENT-MENU": "management menu",
+    "MANAGEMENT-MENU": "Menu Management",
     "CONTACT-TRACING": "Contact Tracing",
     "HOME": "Home",
     "ADMIN": "Admin Board",
