--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,6 +1,6 @@
 {
   "nav": {
-    "MANAGEMENT-MENU": "menu de gestion",
+    "MANAGEMENT-MENU": "Gestion de Menu",
     "CONTACT-TRACING": "Suivi Des Contacts",
     "HOME": "Accueil",
     "ADMIN": "Conseil d'administration",
