add check for active menu section items on menu display

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -121,7 +121,7 @@
     "DRAG": "Drag Food Items Here",
     "SECTION-REQ": "section name is required",
     "VALID": "Valid",
-    "FOOD-BANK": "Food Bank",
+    "FOOD-BANK": "Food Items",
     "MENU-CREATOR": "Menu Creator",
     "SCHEDULE": "Schedule",
     "SCHEDULE-MSG": "Select At Least One Day",
